k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 34.49.254.255.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-api-service
            port:
              number: 80
